--- a/htmlcss/index.html
+++ b/htmlcss/index.html
@@ -4,14 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UK Sepsis Trust</title>
-    <rel href="./css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+     
     <header>
-        <img src="img/logo.jpg" width="20%" alt="UK Sepsis Trust">
+        <nav>
+            <img src="img/logo.jpg" width="200px" alt="UK Sepsis Trust">
+            <div id="buttons">
+            <ul>
+                <li><a href="">About Sepsis</a></li>
+                <li><a href="">Events</a></li>
+                <li><a href="">Become a Partner</a></li>
+            </ul>
+            </div>
+        </nav>
     </header>
-    
+
+    <main>
+        <div class="slideshow-container">
+
+        <div class="mySlides fade">
+        <img src="img/bg1jpg.jpg" style="width:100%">
+        <div class="text">Caption Text</div>
+        </div>
+
+        <div class="mySlides fade">
+        <img src="img/bg1jpg.jpg" style="width:100%">
+        <div class="text">Caption Two</div>
+        </div>
+
+        <div class="mySlides fade">
+        <img src="img/bg1jpg.jpg" style="width:100%">
+        <div class="text">Caption Three</div>
+        </div>
+
+        <a class="prev" onclick="plusSlides(-1)">❮</a>
+        <a class="next" onclick="plusSlides(1)">❯</a>
+
+        </div>
+        <br>
+
+        <div style="text-align:center">
+            <span class="dot" onclick="currentSlide(1)"></span> 
+            <span class="dot" onclick="currentSlide(2)"></span> 
+            <span class="dot" onclick="currentSlide(3)"></span> 
+        </div>
+
+       <script src="js/carousel.js"></script>
+    </main>
+
 </body>
 
 </html>
