Work on the website

--- a/htmlcss/index.html
+++ b/htmlcss/index.html
@@ -14,9 +14,9 @@
             <img src="img/logo.jpg" width="200px" alt="UK Sepsis Trust">
             <div id="buttons">
             <ul>
-                <li><a href="">About Sepsis</a></li>
-                <li><a href="">Events</a></li>
-                <li><a href="">Become a Partner</a></li>
+                <li><button href="">About Sepsis</button></li>
+                <li><button onclick="location.href='events.html'">Events</button></li>
+                <li><button onclick="location.href='partner.html'">Become a Partner</button></li>
             </ul>
             </div>
         </nav>
