solve issues on the website

--- a/htmlcss/index.html
+++ b/htmlcss/index.html
@@ -14,18 +14,10 @@
         <nav>
 
             <a href="">About Sepsis</a>
-            <a href="">Events</a>
-            <a href="">Become a Partner</a>
+            <a href="events.html">Events</a>
+            <a href="partner.html">Become a Partner</a>
 
-            <img src="img/logo.jpg" width="200px" alt="UK Sepsis Trust">
-            <div id="buttons">
-            <ul>
-                <li><button href="">About Sepsis</button></li>
-                <li><button onclick="location.href='events.html'">Events</button></li>
-                <li><button onclick="location.href='partner.html'">Become a Partner</button></li>
-            </ul>
-            </div>
-
+        
         </nav>
     </header>
 
